--- a/src/index.html
+++ b/src/index.html
@@ -31,76 +31,111 @@
 
     <div id="alert"></div>
 
-    <p>Opções de Cadastro:</p>
-    <label>
-      <input type="radio" name="registrationOption" value="salaries" checked />
-      <span>Cadastrar Salários</span>
-    </label>
-    <label>
-      <input type="radio" name="registrationOption" value="average" />
-      <span>Média Salarial</span>
-    </label>
-
-    <div id="registrationSalaries" class="registrationBox">
-      <p>Salários:</p>
-      <div id="salariesBox">
-        <label>
-          <span>R$</span>
-          <input
-            type="number"
-            name="salaries[]"
-            placeholder="0.00"
-            value="998.00"
-          />
-        </label>
-        <label>
-          <span>R$</span>
-          <input
-            type="number"
-            name="salaries[]"
-            placeholder="0.00"
-            value="998.00"
-          />
-        </label>
-      </div>
-      <br />
-      <div>
-        <button id="addSalary">+ Adicionar Salário</button>
-        <button id="startSalary">&gt; Iniciar</button>
-      </div>
-    </div>
-
-    <div id="registrationAverage" class="registrationBox">
-      <p>Média Salarial:</p>
+    <div id="formStart">
+      <p>Opções de Cadastro:</p>
       <label>
-        <span>R$</span>
         <input
-          type="number"
-          name="salaryAverage"
-          placeholder="0.00"
-          value="998.00"
+          type="radio"
+          name="registrationOption"
+          value="salaries"
+          checked
         />
+        <span>Cadastrar Salários</span>
       </label>
-      <br />
-      <div>
-        <button id="startAverage">&gt; Iniciar</button>
+      <label>
+        <input type="radio" name="registrationOption" value="average" />
+        <span>Média Salarial</span>
+      </label>
+
+      <div id="registrationSalaries" class="registrationBox">
+        <p>Salários:</p>
+        <div id="salariesBox">
+          <label>
+            <span>R$</span>
+            <input
+              type="number"
+              name="salaries[]"
+              placeholder="0.00"
+              value="998.00"
+            />
+          </label>
+          <label>
+            <span>R$</span>
+            <input
+              type="number"
+              name="salaries[]"
+              placeholder="0.00"
+              value="998.00"
+            />
+          </label>
+        </div>
+        <br />
+        <div>
+          <button id="addSalary">+ Adicionar Salário</button>
+          <button id="startSalary">&gt; Iniciar</button>
+        </div>
+      </div>
+
+      <div id="registrationAverage" class="registrationBox">
+        <p>Média Salarial:</p>
+        <label>
+          <span>R$</span>
+          <input
+            type="number"
+            name="salaryAverage"
+            placeholder="0.00"
+            value="998.00"
+          />
+        </label>
+        <br />
+        <div>
+          <button id="startAverage">&gt; Iniciar</button>
+        </div>
       </div>
     </div>
 
-    <p>Está custando:</p>
-    <div id="value">
-      <span id="currency">R$</span>
-      <span id="float">0.00</span>
+    <div id="boxMeeting">
+      <p>Está custando:</p>
+      <div id="value">
+        <span id="currency">R$</span>
+        <span id="cost">0.00</span>
+      </div>
+
+      <p>Começou:</p>
+      <div id="initClock">00/00/0000 00:00:00</div>
+
+      <p>Agora são:</p>
+      <div id="actualClock">00/00/0000 00:00:00</div>
+
+      <p>Já dura:</p>
+      <div id="duration">0 minutos</div>
     </div>
 
-    <p>Começou:</p>
-    <div id="initClock">00/00/0000 00:00:00</div>
+    <div id="formStop">
+      <br />
+      <button id="stopMeet">&gt; Encerrar reunião</button>
+    </div>
 
-    <p>Agora são:</p>
-    <div id="actualClock">00/00/0000 00:00:00</div>
+    <div id="resume">
+      <br />
+      <hr />
+      <h3>Relatório da última reunião</h3>
 
-    <p>Já dura:</p>
-    <div id="duration">0 minutos</div>
+      <dl id="resumeCost">
+        <dt>Custo:</dt>
+        <dd>--</dd>
+      </dl>
+
+      <dl id="resumeInitClock">
+        <dt>Começou:</dt>
+        <dd>--</dd>
+      </dl>
+
+      <dl id="resumeDuration">
+        <dt>Durou:</dt>
+        <dd>--</dd>
+      </dl>
+    </div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
