feat: 🎸 add new itens on resume

--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,21 @@
       <hr />
       <h3>Relatório da última reunião</h3>
 
+      <dl id="resumeRegistrationOption">
+        <dt>Opção de Cadastro:</dt>
+        <dd>--</dd>
+      </dl>
+
+      <dl id="resumeSalaries">
+        <dt>Salários:</dt>
+        <dd>--</dd>
+      </dl>
+
+      <dl id="resumeAverage">
+        <dt>Média Salarial:</dt>
+        <dd>--</dd>
+      </dl>
+
       <dl id="resumeCost">
         <dt>Custo:</dt>
         <dd>--</dd>
