feat: 🎸 add hours per month paramenters

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,18 @@
     <div id="alert"></div>
 
     <div id="formStart">
+      <p>Parâmetros:</p>
+      <label title="ex. 40 horas semanais x 5 semanas = 200 horas por mês">
+        <input
+          type="number"
+          name="hoursPerMonth"
+          placeholder="200"
+          value="200"
+          style="width: 45px"
+        />
+        <span>horas por mês</span>
+      </label>
+
       <p>Opções de Cadastro:</p>
       <label>
         <input
