style: 💄 add powered by on footer

--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,27 @@
       </dl>
     </div>
 
+    <div id="poweredBy">
+      <br />
+      <hr />
+
+      Feito com <span id="heart">&#10084;</span> pelo
+      <a
+        href="https://dotenorio.com"
+        title="Veja mais sobre o criador desta ferramenta!"
+        >dotenorio</a
+      >
+
+      <br />
+
+      Veja o projeto no
+      <a
+        href="https://github.com/dotenorio/cmpr"
+        title="Ver este projeto no Github"
+        >Github</a
+      >
+    </div>
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
