refactor: 💡 adjust by lighthouse

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Calculador de custo médio por reunião">
     <title>CMPR - Custo Médio Por Reunião</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
@@ -134,47 +135,6 @@
         <dd>--</dd>
       </dl>
     </div>
-  </div>
-
-  <div id="formStop">
-    <br />
-    <button id="stopMeet">&gt; Encerrar reunião</button>
-  </div>
-
-  <div id="resume">
-    <br />
-    <hr />
-    <h3>Relatório da última reunião</h3>
-
-    <dl id="resumeRegistrationOption">
-      <dt>Opção de Cadastro:</dt>
-      <dd>--</dd>
-    </dl>
-
-    <dl id="resumeSalaries">
-      <dt>Salários:</dt>
-      <dd>--</dd>
-    </dl>
-
-    <dl id="resumeAverage">
-      <dt>Média Salarial:</dt>
-      <dd>--</dd>
-    </dl>
-
-    <dl id="resumeCost">
-      <dt>Custo:</dt>
-      <dd>--</dd>
-    </dl>
-
-    <dl id="resumeInitClock">
-      <dt>Começou:</dt>
-      <dd>--</dd>
-    </dl>
-
-    <dl id="resumeDuration">
-      <dt>Durou:</dt>
-      <dd>--</dd>
-    </dl>
   </div>
 
   <div id="poweredBy">
