refactor: 💡 lighthouse to mobile

--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,11 @@
         </label>
 
         <p>Opções de Cadastro:</p>
-        <label>
+        <label class="with-radio">
           <input type="radio" name="registrationOption" value="salaries" checked />
           <span>Cadastrar Salários</span>
         </label>
-        <label>
+        <label class="with-radio">
           <input type="radio" name="registrationOption" value="average" />
           <span>Média Salarial</span>
         </label>
