--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           </label>
         </div>
         <br />
-        <div>
+        <div class="buttons">
           <button id="addSalary">+ Adicionar Salário</button>
           <button id="startSalary" class="green">&gt; Iniciar</button>
         </div>
@@ -67,7 +67,7 @@
           <input type="number" name="salaryAverage" placeholder="0.00" value="998.00" />
         </label>
         <br />
-        <div>
+        <div class="buttons">
           <button id="startAverage" class="green">&gt; Iniciar</button>
         </div>
       </div>
