feat: 🎸 PWA update feature

--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,12 @@
     <br />
 
     Veja o projeto no
-    <a href="https://github.com/dotenorio/cmpr" title="Ver este projeto no Github">Github</a>
+    <a href="https://github.com/dotenorio/cmpr" title="Ver este projeto no Github">Github!</a>
+  </div>
+
+  <div id="updateBar">
+    Uma nova versão deste aplicativo está disponível.
+    Clique <a href="javascript:void(0)" id="reload">aqui</a> para atualizar!
   </div>
 
   <script type="text/javascript" src="./script.js"></script>
