--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
     <br />
 
     Veja o projeto no
-    <a href="https://github.com/dotenorio/cmpr" title="Ver este projeto no Github">Github!</a>
+    <a href="https://github.com/dotenorio/cmpr" title="Ver este projeto no Github">Github</a>
   </div>
 
   <div id="updateBar">
